added book modal functinoality, book data binding issue

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -17,6 +17,7 @@
 @import 'material-shadow';
 @import 'material-form';
 @import 'material-btn';
+@import 'material-modal';
 
 .title {
     color: $color-font;
