--- a/templates/modals/new-book.modal.htm
+++ b/templates/modals/new-book.modal.htm
@@ -1,33 +1,26 @@
-<div class="modal-header">
-    <h3>Create A New Account!</h3>
-</div>
-<form name="form.userForm" ng-submit="submitForm()" novalidate>
-    <div class="modal-body">
-        <!-- NAME -->
-        <div class="form-group">
-            <label>Name</label>
-            <input type="text" name="name" class="form-control" ng-model="name" required>
-            <p ng-show="form.userForm.name.$invalid && !form.userForm.name.$pristine" class="help-block">You name is required.</p>
-        </div>
 
-        <!-- USERNAME -->
-        <div class="form-group">
-            <label>Username</label>
-            <input type="text" name="username" class="form-control" ng-model="user.username" ng-minlength="3" ng-maxlength="8" required>
-            <p ng-show="form.userForm.username.$error.minlength" class="help-block">Username is too short.</p>
-            <p ng-show="form.userForm.username.$error.maxlength" class="help-block">Username is too long.</p>
-        </div>
-
-        <!-- EMAIL -->
-        <div class="form-group">
-            <label>Email</label>
-            <input type="email" name="email" class="form-control" ng-model="email" required>
-            <p ng-show="form.userForm.email.$invalid && !form.userForm.email.$pristine" class="help-block">Enter a valid email.</p>
-        </div>
-
+<div class="material-modal">
+    <div class="primary-title">
+        Add a Book
     </div>
-    <div class="modal-footer">
-        <button type="submit" class="btn btn-primary" ng-disabled="form.userForm.$invalid">OK</button>
+    <form class="material-form form-group" ng-submit="createAccount()">
+        <div class="row">
+            <div class="material-input-field">
+                <input type="text" id="name" ng-model="name">
+                <label for="name" ng-class="{'with-text': name.length > 0}">Name</label>
+            </div>
+        </div>
+    </form>
+<!--
+    <button type="submit" class="btn btn-primary" ng-disabled="form.userForm.$invalid">OK</button>
         <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
+-->
+    <div class="action-area">
+        <button type="button" class="material-btn flat primary" ng-class="{'disabled': false}" ng-click="addBook(name)">
+            ADD BOOK
+        </button>
+        <button type="button" class="material-btn flat default" ng-click="cancel()">
+            CANCEL
+        </button>
     </div>
-</form>
+</div>
