--- a/styles/layout.css
+++ b/styles/layout.css
@@ -99,6 +99,7 @@ body {
   height: 100%;
   width: 100%;
   text-align: center;
+  position: relative;
 }
 
 #header-content {
@@ -110,83 +111,50 @@ body {
   left: 390px;
 }
 
-#menu .caret {
-  visibility: hidden;
-}
-
-#menu .special-title {
-  visibility: hidden;
-}
-
-#menu .btn.btn-default.dropdown-toggle:after {
-  font-family: 'Glyphicons Halflings';
-  content: '\e236';
-  margin-left: -.25em;
+#header .btn-group.dropdown,
+#header .btn-group.dropdown:active,
+#header .btn-group.dropdown:focus {
   position: absolute;
-  left: 14px;
-  font-size: 24px;
-  top: 3px;
-}
-
-#menu .btn.btn-default.dropdown-toggle {
-  position: absolute;
-  left: 10px;
-  z-index: 100;
-  background-color: #009688;
-  width: 38px;
-  height: 38px;
-  padding: 0;
-  font-size: 1em;
-  color: #fff;
-  text-align: center;
+  right: 0;
+  margin-right: 8px;
+  height: 100%;
+  font-size: 14px;
+  background: transparent;
   border: none;
+  box-shadow: none;
 }
 
-#menu .btn.btn-default.dropdown-toggle:hover {
-  cursor: pointer;
-  background-color: #007d71;
+#header .btn-group.dropdown:hover,
+#header .btn-group.dropdown:active,
+#header .btn-group.dropdown:focus,
+#header .dropdown #profile-dropdown:hover,
+#header .dropdown #profile-dropdown:active,
+#header .dropdown #profile-dropdown:focus {
+  text-decoration: underline;
 }
 
-#menu .btn.btn-default.dropdown-toggle:active,
-#menu .btn.btn-default.dropdown-toggle:focus {
-  cursor: pointer;
-  background-color: #00635a;
+#header .dropdown #profile-dropdown {
+  background: transparent;
+  border: none;
+  box-shadow: none;
+  height: 100%;
 }
 
-#menu .dropdown-menu.open {
-  -moz-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-  -ms-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-  -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+#header .dropdown-menu {
+  -moz-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  -ms-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  -webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
   transition: box-shadow .25s ease-in-out;
-  position: relative;
-  top: 30px;
-  left: 15%;
-  height: auto;
-  width: 120%;
-  max-height: 25vh;
-  transition: max-height .25s ease-in-out;
-  background-color: #fff;
-  border: none;
   border-radius: 2px;
-  z-index: 101;
+  right: 0;
+  left: auto;
+  min-width: 200px;
+  margin-top: -10px;
 }
 
-#menu .dropdown-menu > li > div {
+#header .dropdown-menu .disabled {
   padding: 3px 20px;
   color: #bdbdbd;
-}
-
-#header-content-wrapper .form-control {
-  -webkit-box-shadow: none;
-  box-shadow: none;
-  width: auto;
-  position: absolute;
-  left: 0;
-  background-color: transparent;
-}
-
-#righoverflow-menut .nya-bs-select.btn-group .dropdown-menu {
-  width: 100% !important;
-  min-width: initial !important;
+  cursor: default;
 }
