--- a/templates/conduit.html
+++ b/templates/conduit.html
@@ -1,39 +1,40 @@
-<div id="wrapper">        
+<div id="wrapper" ng-controller="PageCtrl">        
     <div id="header">
         <div id="header-content-wrapper">
-            <ol id="menu" class="nya-bs-select dropdown form-control" ng-model="books">
-                <li>
-                    <a  href="mailto:conduit@nga.mil">
-                        Send Feedback&nbsp;&nbsp;<span class="glyphicon glyphicon-bullhorn pull-right"></span>
-                    </a>
-                </li>
-                <li>
-                    <a  href="/logoff">
-                        Log Off&nbsp;&nbsp;<span class="glyphicon glyphicon-log-out pull-right"></span>
-                    </a>
-                </li>
-                <li>
-                    <div>
-                        Version 0.6.0
-                    </div>
-                </li>
-            </ol>
             <div id="header-content">
                 Conduit Beta
             </div>
-            
-            <!--
-            <a href="mailto:conduit@nga.mil">
-                <div class="btn btn-default pull-right" ng-click="saveState()">
-                    <span class="glyphicon glyphicon-bullhorn"></span> 
-                    <div class="ico-text-2">&nbsp;Send Feedback</div>
+            <div class="btn-group" uib-dropdown keyboard-nav>
+                    <button     id="profile-dropdown"
+                                type="button" class="menu-btn"
+                                uib-dropdown-toggle>
+                        {{user.given_name}}
+                        <span class="caret"></span>
+                    </button>
+                    <ul uib-dropdown-menu role="menu" aria-labelledby="profile-dropdown">
+                        <li role="menuitem">
+                            <a href="mailto:conduit@nga.mil">
+                                Send Feedback&nbsp;&nbsp;
+                                <span class="glyphicon glyphicon-bullhorn pull-right"></span>
+                            </a>
+                        </li>
+                        <li role="menuitem">
+                            <a href="/logoff">
+                                Log Off&nbsp;&nbsp;
+                                <span class="glyphicon glyphicon-log-out pull-right"></span>
+                            </a>
+                        </li>
+                        <li>
+                            <div class="disabled">
+                                Version 0.6.0
+                            </div>
+                        </li>
+                    </ul>
                 </div>
-            </a>
-        -->
         </div>
     </div>
 
-<div ng-controller="PageCtrl">
+<div>
     <div id="container">
         <div id="center" class="column" ng-controller="ViewerCtrl" ng-cloak>
             <div class="article-view"  ng-model="article" data-scroll-to-top="articles[currentIndex]">
