Various style updates

--- a/sass/material-modal.scss
+++ b/sass/material-modal.scss
@@ -55,3 +55,7 @@ $lr-padding: 24px;
 .material-modal .expand-area {
     padding-top: 16px;
 }
+
+.material-modal .material-btn.flat {
+    font-weight: bold;
+}
