--- a/styles/style.css
+++ b/styles/style.css
@@ -882,53 +882,56 @@ body {
   display: inline-block;
 }
 
+/*
 #action-area .btn {
-  height: 36px;
-  background: transparent;
-  border: none;
-  border-radius: 2px !important;
-  float: right;
-  font-weight: 700;
+    height: $act-btn-height;
+    background: transparent;
+    border: none;
+    border-radius: 2px !important;
+    
+    float: right;
+    font-weight: 700;
 }
 
-#action-area .btn-default {
-  color: #212121;
+#action-area .btn-default{
+    color: $color-font;
 }
 
 #action-area .btn-default:hover,
-#action-area .btn-default:focus {
-  background: rgba(33, 33, 33, 0.12);
+#action-area .btn-default:focus{
+    background: rgba($color-font, .12);
 }
 
-#action-area .btn-primary {
-  color: #009688;
+#action-area .btn-primary{
+    color: $color-primary;
 }
 
 #action-area .btn-primary:hover,
 #action-area .btn-primary:focus,
 #action-area .btn-primary:active,
-#action-area .btn-primary.open {
-  background: rgba(0, 150, 136, 0.12);
-  box-shadow: none;
-}
-
+#action-area .btn-primary.open{
+    background: rgba($color-primary, .12);
+    box-shadow: none;
+}*/
+/*
 #action-area .dropdown-menu.open {
-  -moz-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-  -ms-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-  -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-  transition: box-shadow .25s ease-in-out;
-  position: relative;
-  top: -350%;
-  right: 0;
-  height: auto;
-  max-height: 25vh;
-  transition: max-height .25s ease-in-out;
-  max-width: 70%;
-  background-color: #fff;
-  border: none;
-  border-radius: 2px;
-  z-index: 101;
+    @include material-shadow(2);
+    
+    position: relative;
+    top: -350%;
+    right: 0;
+    height: auto;
+    max-height: 25vh;
+    transition: max-height .25s ease-in-out;
+    max-width: 70%;
+    background-color: #fff;
+    border: none;
+    border-radius: 2px;
+    z-index: 101;
+}*/
+#action-area .material-btn {
+  margin: 0;
+  font-weight: 700;
 }
 
 #action-area .btn-group.open .dropdown-toggle {
@@ -1992,6 +1995,18 @@ label.active {
 
 .material-modal .material-btn.flat {
   font-weight: bold;
+}
+
+.material-dropdown .dropdown-menu {
+  -moz-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  -ms-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  transition: box-shadow .25s ease-in-out;
+  background-color: #fff;
+  border: none;
+  border-radius: 2px;
+  z-index: 101;
 }
 
 .title {
