--- a/templates/conduit.html
+++ b/templates/conduit.html
@@ -5,32 +5,32 @@
                 Conduit Beta
             </div>
             <div class="btn-group" uib-dropdown keyboard-nav>
-                    <button     id="profile-dropdown"
-                                type="button" class="menu-btn"
-                                uib-dropdown-toggle>
-                        {{user.given_name + ' ' + user.last_name}}
-                        <span class="caret"></span>
-                    </button>
-                    <ul uib-dropdown-menu role="menu" aria-labelledby="profile-dropdown">
-                        <li role="menuitem">
-                            <a href="mailto:conduit@nga.mil">
-                                Send Feedback&nbsp;&nbsp;
-                                <span class="glyphicon glyphicon-bullhorn pull-right"></span>
-                            </a>
-                        </li>
-                        <li role="menuitem">
-                            <a href="/logoff">
-                                Log Off&nbsp;&nbsp;
-                                <span class="glyphicon glyphicon-log-out pull-right"></span>
-                            </a>
-                        </li>
-                        <li>
-                            <div class="disabled">
-                                Version 0.6.0
-                            </div>
-                        </li>
-                    </ul>
-                </div>
+                <button     id="profile-dropdown"
+                            type="button" class="menu-btn"
+                            uib-dropdown-toggle>
+                    {{user.given_name + ' ' + user.last_name}}
+                    <span class="caret"></span>
+                </button>
+                <ul uib-dropdown-menu role="menu" aria-labelledby="profile-dropdown">
+                    <li role="menuitem">
+                        <a href="mailto:conduit@nga.mil">
+                            Send Feedback&nbsp;&nbsp;
+                            <span class="glyphicon glyphicon-bullhorn pull-right"></span>
+                        </a>
+                    </li>
+                    <li role="menuitem">
+                        <a href="/logoff">
+                            Log Off&nbsp;&nbsp;
+                            <span class="glyphicon glyphicon-log-out pull-right"></span>
+                        </a>
+                    </li>
+                    <li>
+                        <div class="disabled">
+                            Version 0.6.0
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
 
@@ -186,7 +186,7 @@
                         </ul>
                     </div>
                     <div id="default-action-buttons" ng-show="!articleEdit.$visible && !versionsView()">
-                        <ol class="btn btn-primary nya-bs-select dropup col-xl-4"
+                        <!--<ol class="btn btn-primary nya-bs-select dropup col-xl-4"
                             id="toolbox-books"
                             multiple
                             data-selected-text-format="count>2"
@@ -198,8 +198,24 @@
                                     <span class="glyphicon glyphicon-ok check-mark"></span>
                                 </a>
                             </li>
-                        </ol>
-                        <button class="btn btn-default"
+                        </ol>-->
+                        <div class="btn-group material-dropdown dropup pull-right" uib-dropdown keyboard-nav>
+                            <button     id="profile-dropdown"
+                                        type="button" class="material-btn flat primary bold"
+                                        uib-dropdown-toggle>
+                                {{'ADD'}}
+                                <span class="caret"></span>
+                            </button>
+                            <ul uib-dropdown-menu role="menu">
+                                <li role="menuitem" ng-repeat="book in books">
+                                    <a href="">
+                                        {{::book.name}}&nbsp;&nbsp;&nbsp;
+                                        <span class="glyphicon glyphicon-ok pull-right"></span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                        <button class="material-btn flat default"
                                 ng-click="articleEdit.$show()"
                                 title="EDIT">
                             <!--<span class="glyphicon glyphicon-save-file">&nbsp;</span>-->
@@ -208,7 +224,7 @@
                         <button uib-popover-template="'templates/comments-popover.html'"
                                 popover-title="DISCUSS"
                                 type="button"
-                                class="btn btn-default"
+                                class="material-btn flat default"
                                 popover-trigger="'outsideClick'"
                                 popover-is-open="discussPopoverOpen"
                                 title="DISCUSS">
@@ -217,7 +233,7 @@
                                     DISCUSS<span ng-if="articles[currentIndex].comments.length > 0" class="badge" style="margin-left:4px">{{articles[currentIndex].comments.length}}</span>
                                 </div>
                         </button>
-                        <button class="btn btn-default"
+                        <button class="material-btn flat default"
                                 ng-click="export(articles[currentIndex])"
                                 title="EXPORT">
                                 <div class="ico-text-1">EXPORT</div>
@@ -225,13 +241,13 @@
                     </div>
                     <!-- In edit view -->
                     <div id="edit-action-buttons" ng-show="articleEdit.$visible">
-                        <button class="btn btn-primary"
+                        <button class="material-btn flat primary"
                                 type="submit"
                                 title="SUBMIT">
                             <!--<span class="glyphicon glyphicon-save-file">&nbsp;</span>-->
                             <div class="ico-text-1">SUBMIT</div>
                         </button>
-                        <button class="btn btn-default"
+                        <button class="material-btn flat default"
                                 ng-click="articleEdit.$cancel()"
                                 title="CANCEL">
                             <!--<span class="glyphicon glyphicon-save-file">&nbsp;</span>-->
