Styles for discuss popover

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -19,6 +19,7 @@
 @import 'material-btn';
 @import 'material-modal';
 @import 'material-menu';
+//@import 'material-popover';
 
 .title {
     color: $color-font;
