--- a/templates/comments-popover.html
+++ b/templates/comments-popover.html
@@ -17,4 +17,14 @@
             </input>
         </div>
     </form>
+    <!--
+    <form class="material-form form-group" ng-submit="post(newComment)">
+            <div class="row">
+                <div class="material-input-field">
+                    <input type="text" id="newComment" ng-model="newComment" focus-on="discuss-opened">
+                    <label for="newComment" ng-class="{'with-text': newComment.length > 0}">Comment</label>
+                </div>
+            </div>
+        </form>
+    -->
 </div>
