Book manager created

--- a/templates/conduit.html
+++ b/templates/conduit.html
@@ -423,8 +423,8 @@
                         </a>
                     </li>
                     <li class="divider"></li>
-                    <li ng-controller="NewBookModalCtrl" ng-click="showForm()" title="Add new book">
-                        <a><div class="ico-text-1">Add new book</div></a>
+                    <li ng-controller="NewBookModalCtrl" ng-click="showForm()" title="Manage books">
+                        <a><div class="ico-text-1">Manage books</div></a>
                     </li>
                 </ol>
                 <button	type="button"
