--- a/sass/style.scss
+++ b/sass/style.scss
@@ -19,6 +19,7 @@
 @import 'material-btn';
 @import 'material-modal';
 @import 'material-menu';
+@import 'material-table';
 //@import 'material-popover';
 
 .title {
