--- a/styles/material-form.css
+++ b/styles/material-form.css
@@ -167,16 +167,36 @@
   transition: all .25s ease-in-out;
 }
 
-.material-form label.hide {
+.material-form label.hide,
+.material-input-field .counter.hide {
   opacity: 0;
   transition: opacity .25s linear;
 }
 
-.material-form label.fade-in {
+.material-form label.fade-in,
+.material-input-field .counter.fade-in {
   opacity: 1;
   transition: opacity .25s linear;
 }
 
 label.active {
   color: #009688;
+}
+
+.material-form label.error,
+.material-input-field .counter.error {
+  color: red !important;
+  transition: all .25s ease-in-out;
+}
+
+.material-form.form-group input.error {
+  border-bottom-color: red !important;
+}
+
+.material-input-field .counter {
+  color: #bdbdbd;
+  height: 12px;
+  font-size: 12px;
+  float: right;
+  transition: all .25s ease-in-out;
 }
