--- a/templates/modals/new-book.modal.htm
+++ b/templates/modals/new-book.modal.htm
@@ -16,7 +16,7 @@
         <form class="material-form form-group row add" ng-submit="addBook(name)">
             <div class="row-content">
                 <div class="definition">
-                        <input type="text" id="name" ng-model="name" placeholder="New book">
+                        <input type="text" id="name" ng-model="name" placeholder="Add new book...">
                 </div>
                 <div class="definition">
                         <span class="glyphicon glyphicon-plus" ng-click="addBook(name)"></span>
