--- a/sass/material-form.scss
+++ b/sass/material-form.scss
@@ -202,16 +202,13 @@ $input-spacing-margin-bottom: 8px;
     transition: all .25s ease-in-out;
 }
 
-.material-form label.hide,
-.material-input-field .counter.hide {
-    opacity: 0;
-    transition: opacity .25s linear;
+.fade {
+    transition: all linear .25s;
+    opacity: 1;
 }
 
-.material-form label.fade-in,
-.material-input-field .counter.fade-in {
-    opacity: 1;
-    transition: opacity .25s linear;
+.fade.ng-hide {
+    opacity: 0;
 }
 
 label.active {
