--- a/styles/style.css
+++ b/styles/style.css
@@ -345,7 +345,6 @@ body {
   bottom: 24px;
   width: auto;
   height: auto;
-  padding: 2px;
 }
 
 .stream-header .stream-action:hover,
@@ -370,7 +369,9 @@ body {
   right: 0;
   bottom: 0;
   left: 0;
-  width: 100%;
+  min-width: 80%;
+  width: auto;
+  max-width: 120%;
   text-align: left;
   height: auto;
 }
